align horizontal/html fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -53,23 +53,23 @@ span{
 
 
 .diff-colors  img {
-      border: solid 2px #81bce6;
-      width: 60px;
-      height: 66px;
-      position: absolute;
-      bottom: 40px;
-      left: -8px;
-      opacity: 0;
+  border: solid 2px #81bce6;
+  width: 74px;
+  height: 69px;
+  position: absolute;
+  bottom: 39px;
+  left: -2px;
+  opacity: 0;
 }
 
 .size-chart  img {
-      border: solid 2px #81bce6;
-      width: 68px;
-      height: 160px;
-      position: absolute;
-      bottom: 40px;
-      left: -8px;
-      opacity: 0;
+  border: solid 2px #81bce6;
+  width: 75px;
+  height: 160px;
+  position: absolute;
+  bottom: 39px;
+  left: -2px;
+  opacity: 0;
 }
 
 
@@ -116,9 +116,6 @@ li  {
   align-items: center;
 }
 
-.footer-bar {
-  display: flex;
-}
 
 li:hover {
 
@@ -135,7 +132,7 @@ li:hover > span {
 .items .material-icons{
   position: relative;
   top: 1px;
-  left: 10px;
+  left: 27px;
 }
 
 .items > span {
@@ -155,6 +152,11 @@ li:hover > span {
 
 .pink-stop {
    color: #d482aa;
+}
+
+
+.footer-bar {
+  display: flex;
 }
 
 .price{
